<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.etpa.etpa.BaseActivity">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_gray_24dp"
        android:title="@string/mb_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_find_friend"
        android:icon="@drawable/ic_search_gray_24dp"
        android:title="@string/mb_find_friend"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_plan_trip"
        android:icon="@drawable/ic_book_24dp"
        android:title="@string/mb_plan_trip"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_my_trips"
        android:icon="@drawable/ic_list_gray_24dp"
        android:title="@string/mb_my_trips"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu_gray_24dp"
        android:title="@string/mb_more"
        app:showAsAction="always" />

</menu>