<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    tools:context="com.tripfriend.MainActivity">

    <ImageView
        android:id="@+id/am_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_people_500px"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/am_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_title"
        android:layout_marginRight="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorOrange"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/am_logo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/am_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/am_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/am_title"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/am_find_friend_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/am_find_friend_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/am_description"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <Button
        android:id="@+id/am_find_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/am_find_friend"
        android:background="@drawable/button_border"
        android:textColor="@color/colorOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_find_friend_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/am_plan_trip_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/am_plan_trip_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/am_find_friend"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <Button
        android:id="@+id/am_plan_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/am_plan_trip"
        android:background="@drawable/button_border"
        android:textColor="@color/colorOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_plan_trip_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <include
        layout="@layout/element_bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
